<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_background">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/help"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="30sp"
        android:textColor="@color/colorAccent"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_explanation"
                android:textSize="20sp"
                android:textColor="@color/colorAccent"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_games_mode"
                android:textSize="20sp"
                android:textColor="@color/colorAccent"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_normal"
                android:textSize="20sp"
                android:textColor="@color/colorAccent"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_accumulative"
                android:textSize="20sp"
                android:textColor="@color/colorAccent"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_inverse"
                android:textSize="20sp"
                android:textColor="@color/colorAccent"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_inverse_accumulative"
                android:textSize="20sp"
                android:textColor="@color/colorAccent"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_random_card"
                android:textSize="20sp"
                android:textColor="@color/colorAccent"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>