<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.MenuFragment">

    <ImageButton
        android:id="@+id/btnSettigns"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_settings"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:background="@color/colorPrimary"
        android:tint="@color/colorPrimaryDark"
        android:layout_margin="5dp"
        android:layout_alignParentEnd="true"/>

    <Button
        android:id="@+id/btnHelp"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/question_button"
        android:text="@string/question"
        android:textSize="20sp"
        android:textColor="@color/colorAccent"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:tint="@color/colorPrimaryDark"
        android:layout_margin="5dp"
        android:layout_alignParentStart="true"/>

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_below="@id/btnSettigns"
        android:layout_centerHorizontal="true"
        android:textSize="50sp"
        android:textStyle="bold"
        android:layout_marginBottom="40dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/tvTitle"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/btnNormalGame"
            android:text="@string/normal_game"
            style="@style/MenuButton"/>
        <Button
            android:id="@+id/btnAccumulativeGame"
            android:text="@string/accumulative_game"
            style="@style/MenuButton"/>
        <Button
            android:id="@+id/btnInverseGame"
            android:text="@string/inverse_game"
            style="@style/MenuButton"/>
        <Button
            android:id="@+id/btnInverseAccumulativeGame"
            android:text="@string/inverse_accumulative_game"
            style="@style/MenuButton"/>
        <Button
            android:id="@+id/btnRandomCard"
            android:text="@string/random_card"
            style="@style/MenuButton"/>

    </LinearLayout>

</RelativeLayout>