<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_background">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="30sp"
        android:textColor="@color/colorAccent"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/language"
            android:textSize="25sp"
            android:textColor="@color/colorAccent"/>
        <Spinner
            android:id="@+id/spLanguageSpinner"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:textSize="25sp"
            android:textColor="@color/colorAccent"
            android:foregroundTint="@color/colorAccent"/>
    </LinearLayout>

    <Button
        android:id="@+id/btnRemoveAds"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/remove_ads"
        android:textSize="15sp"
        android:background="@drawable/button"
        android:backgroundTint="@color/colorAccent"/>

</LinearLayout>